A      afb3D.m
A      upfirdn2dMex.mexa64
A      dwt3D.m
M      CHANGES.txt
A      upfirdn2dMex.mexw64
A      kmeans3D.m
A      farras.m
A      upfirdn2dMex.mexw32
A      cshift3D.m
A      upfirdn2dMex.mexglx
A      upfirdn2dMex.mexmaci
M      cg_vbm8_write.m
M      cg_noise_estimation.m

(1) Noise estimation is now based on wavelet method of Coupe et al. 
    Med Image Anal. 2010, that is more robust. Many files were added to
    provide 3D discrete wavelet transformation.
(2) Added calculation of SNR and CNR to cg_vbm8_write.m.
------------------------------------------------------------------------
r334 | gaser | 2010-05-19 12:55:39

M      cg_vbm8_write.m

Increased numbers of morphological closing steps to 20 for final
masking in cg_vbm8_write. This will prevent holes in CSF segmentation.
Thanks to Paul (dargonchow@HOTMAIL.COM) for pointing to this issue.

------------------------------------------------------------------------
r335 | gaser | 2010-05-23 11:22:20

M       cg_vbm8_write.m

Updated Dartel parameters rparam to actual values of SPM8 version.
------------------------------------------------------------------------
r336 | gaser | 2010-05-24 14:53:18

M       upfirdn2dMex.mexw64

Phil Kragel has recompiled upfirdn2dMex.c for Windows 64 bit because of some
problems with Windows Server 2008 R2.
------------------------------------------------------------------------
r337 | gaser | 2010-05-25 20:03:48

M       cg_vbm8_write.m

Added path of New Segment toolbox to cg_vbm8_write.m.
------------------------------------------------------------------------
r338 | gaser | 2010-05-27 07:35:45

M       kmeans3D.m
M       upfirdn2dMex.mexw32
M       cg_noise_estimation.m

(1) Michael Bodnar has recompiled upfirdn2dMex.c for Windows 32 bit because 
    of some problems with Windows XP and Vista.
(2) Changed kmeans3D.m to decrease the large memory demand.
------------------------------------------------------------------------
r339 | gaser | 2010-05-28 17:24:47